--- a/src/main/resources/assets/dgmod/lang/en_us.json
+++ b/src/main/resources/assets/dgmod/lang/en_us.json
@@ -1,3 +1,16 @@
 {
-  "item.dgmod.bismuth": "Bismuth"
+
+  "item.dgmod.bismuth": "Bismuth",
+  "item.dgmod.raw_bismuth": "Raw Bismuth",
+  "item.dgmod.shit": "Shit",
+  "item.dgmod.chisel": "Chisel",
+
+  "item.dgmod.magic_block": "Magic Block",
+
+  "block.dgmod.bismuth_block": "Block of Bismuth",
+  "block.dgmod.bismuth_ore": "Bismuth Ore",
+  "block.dgmod.bismuth_deepslate_ore": "Bismuth Deepslate Ore",
+
+  "creativetab.dgmod.bismuth_items": "Bismuth Items",
+  "creativetab.dgmod.bismuth_blocks": "Bismuth Blocks"
 }
